@@ -45,4 +45,16 @@ public interface IAnnotationFinder {
    * @return true if the ith parameter of the given method has the annotation @TestInstance.
    */
   public boolean hasTestInstance(Method method, int i);
+  
+  /**
+   * @return the @Optional values of this method's parameters (<code>null</code> 
+   * if the parameter isn't optional)
+   */
+  public String[] findOptionalValues(Method method);
+  
+  /**
+   * @return the @Optional values of this method's parameters (<code>null</code>
+   * if the parameter isn't optional)
+   */
+  public String[] findOptionalValues(Constructor ctor);
 }
